button block overflow fix
Set white-space: normal
Ref: https://stackoverflow.com/questions/19587959/bootstrap-tb3-does-not-wrap-button-text-in-bootstrap-tb3-cols

--- a/portfolio-styles.css
+++ b/portfolio-styles.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Roboto Condensed', sans-serif;
 }
+
 header{
     padding-top: 5px;
     padding-bottom: 10px;
@@ -13,15 +14,11 @@ header h1{
 header p{
     font-size: 16px;
 }
-/* header p a{
-    color:yellowgreen;
-}
-header p a:hover{
-    color:lightgray;
-} */
+
 footer{
     padding-bottom: 20px;
 }
+
 ul{
     padding-left: 20px;
 }
@@ -53,8 +50,8 @@ h2{
     font-weight:600;
 }
 h3{
-    font-size: 16px;
-    font-weight:500;
+    font-size: 18px;
+    font-weight:300;
 }
 
 .btn-block{
@@ -63,6 +60,7 @@ h3{
     padding-bottom: 5px;
     margin-top: 20px;
     text-align: left;
+    white-space: normal;
 }
 .btn-dark{
     background-color: black;
